stars added to beach cards

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -46,6 +46,7 @@
         transition-timing-function: cubic-bezier(.175, .885, .32, 1.275);
         transition-duration: .2s;
         transition-property: transform, opacity;
+        transition-duration:1.5s;
     }
     >.front {
         transform: rotateY(0deg);
@@ -147,8 +148,8 @@
 
 .location-bottom-right{
   position: absolute;
-  right: 16px;
-  bottom: 5px;
+  right: 10px;
+  bottom: 10px;
   font-size: 1.9rem !important;
   line-height: 100% !important;
   color: #daa520 !important;
@@ -156,7 +157,7 @@
 }
 
 .location-bottom-left{
-  width: 70px;
+  width: 60px;
   position: absolute;
   left: 10px;
   bottom: 10px;
