--- a/app/views/beaches/show.html.erb
+++ b/app/views/beaches/show.html.erb
@@ -31,9 +31,9 @@
           <% if c < rating %>
             <span class="fas fa-star checked geral pl-2 pt-1"></span>
           <% elsif c - rating == 0.5%>
-            <span class="fas fa-star-half checked geral pl-2 pt-1"></span>
+            <span class="fas fa-star-half-alt checked geral pl-2 pt-1"></span>
           <% else %>
-            <span class="fas fa-star geral pl-2 pt-1"></span>
+            <span class="far fa-star checked geral pl-2 pt-1"></span>
           <% end  %>
           <% c += 1 %>
         <% end  %>
