--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -11,6 +11,11 @@
   font-family: "Work Sans", "Helvetica", "sans-serif";
 }
 
+#map{
+  height: 500px !important;
+  width: 100% !important;
+}
+
 .map-img{
   width: 40px;
   height: auto;
