filter and ordered by done

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -2,6 +2,10 @@
   border: none;
   background-color: transparent;
   height: 38px;
-  margin-left: 7px;
 }
 
+.btn-go {
+  width: 100px;
+  margin-left: 15px;
+  margin-top: 10px;
+}
