--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -1,7 +1,20 @@
 
 .search{
   width: 100%;
-  text-align: center;
-  z-index: 1;
+  // z-index: 1;
   position: relative;
+}
+
+.searchers{
+  position: relative;
+}
+
+#filter p{
+  font-size: 20px;
+  font-family: 'Anton', sans-serif;
+}
+
+#box {
+  height: 39px;
+  box-sizing: content-box;
 }
