--- a/app/views/beaches/index.html.erb
+++ b/app/views/beaches/index.html.erb
@@ -8,49 +8,19 @@
 </header>
 <main>
   <div class="mr-3 ml-3">
-    <div id="beaches" class="search d-flex w-100">
+    <div id="beaches" class="search d-flex">
       <p class="pl-3">Qual a praia perfeita para você?</p>
       <%= form_tag beaches_path, method: :get, class: "pl-3" do %>
         <%= text_field_tag :query,
           params[:query],
-          class: "form-control  pl-3",
-          placeholder: "Ache uma praia"
-        %>
-      <% end %>
-      <%= button_tag :submit, class: "non-btn" do %>
+          placeholder: "Digite uma praia..." %>
+          <%= select_tag :box, raw("<option>Melhor praia</option><option>Melhor praia para surfe</option><option>Praia mais limpa</option><option>Praia mais segura</option><option>Praia mais acessível</option>" ), prompt: "Ordenar por" %>
+           <%= button_tag :submit, class: "non-btn" do %>
             <i class="fas fa-search h2"></i>
           <% end %>
-      <%= form_tag beaches_path, method: :get, class: 'form-vertical d-flex justify-content-start vertical-align-center' do %>
-        <%= hidden_field_tag 'search', "Melhor praia" %>
-        <%= button_tag :submit, class: "non-btn" do %>
-          <i class="fas fa-umbrella-beach"></i>
-        <% end %>
-      <% end %>
-      <%= form_tag beaches_path, method: :get, class: 'form-vertical d-flex justify-content-start vertical-align-center' do %>
-        <%= hidden_field_tag 'search', "Melhor praia para surfe" %>
-        <%= button_tag :submit, class: "non-btn" do %>
-          <i class="fas fa-snowboarding"></i>
-        <% end %>
-      <% end %>
-      <%= form_tag beaches_path, method: :get, class: 'form-horizontal d-flex justify-content-start vertical-align-center' do %>
-        <%= hidden_field_tag 'search', "Praia mais segura" %>
-        <%= button_tag :submit, class: "non-btn" do %>
-          <i class="fas fa-user-ninja"></i>
-        <% end %>
-      <% end %>
-      <%= form_tag beaches_path, method: :get, class: 'form-horizontal d-flex justify-content-start vertical-align-center' do %>
-        <%= hidden_field_tag 'search', "Praia mais acessível" %>
-        <%= button_tag :submit, class: "non-btn" do %>
-          <i class="fas fa-car-side"></i>
-        <% end %>
-      <% end %>
-      <%= form_tag beaches_path, method: :get, class: 'form-horizontal d-flex justify-content-start vertical-align-center' do %>
-        <%= hidden_field_tag 'search', "Praia mais limpa" %>
-        <%= button_tag :submit, class: "non-btn" do %>
-          <i class="fas fa-trash"></i>
-        <% end %>
-      <% end %>
-    </div>
+          <% end %>
+      </div>
+
 
     <div class="row">
       <% @beaches.each do |beach| %>
