--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -96,12 +96,60 @@ main {
   font-family: 'Anton', sans-serif;
 }
 
+
+@media (max-width: 1680px) {
+  main{
+    margin-top: -750px;
+  }
+}
+
+@media (max-width: 1600px) {
+  main{
+    margin-top: -670px;
+  }
+}
+
+@media (max-width: 1440px) {
+  main{
+    margin-top: -510px;
+  }
+}
+
+@media (max-width: 1400px) {
+  main{
+    margin-top: -470px;
+  }
+}
+
+@media (max-width: 1280px) {
+  main{
+    margin-top: -350px;
+  }
+}
+
+
 @media (max-width: 750px) {
   .banner {
     height: 200px;
     padding: 70px 0;
   }
+  main{
+    margin-top: 0px;
+  }
   .index p{
     margin-top: -320px;
+  }
+}
+
+
+@media (max-width: 720px) {
+  main{
+    margin-top: 0px;
+  }
+}
+
+@media (max-width: 540px) {
+  main{
+    margin-top: 0px;
   }
 }
