--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -153,13 +153,33 @@
   line-height: 100% !important;
   color: #daa520 !important;
   text-shadow: 3px 3px black;
+  vertical-align: middle;
 }
 
 .location-bottom-left{
-  width: 60px;
   position: absolute;
   left: 10px;
   bottom: 10px;
+}
+
+.img-wea {
+  width: 60px;
+}
+.img-wav {
+  width: 40px;
+  height: 100%;
+  padding-top: 10px;
+  padding-right: 1px;
+}
+.img-win {
+  width: 30px;
+  height: 100%;
+  padding-right: 1px;
+}
+.img-wat {
+  width: 25px;
+  height: 100%;
+  padding-right: 1px;
 }
 
 .h3-overview{
@@ -227,4 +247,47 @@
   .image-smallss{
     height: 40px;
   }
+}
+
+.card-trip {
+  height: 180px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+}
+
+.card-trip{
+  .image-temp{
+    width: 90px;
+  }
+  .image-wave{
+    width: 290px;
+    padding-top: 10px;
+  }
+  .image-wea{
+    width: 150px;
+  }
+  .image-clean{
+    width: 110px;
+    padding-top: 3px;
+  }
+  .image-wind{
+    width: 110px;
+  }
+}
+
+.card-trip-infos{
+  text-align: center;
+  position: absolute;
+  bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+}
+
+.card-trip p {
+  text-align: center;
+  font-size: 16px;
+  margin: 0;
+  font-weight: bold;
 }
