--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,10 +1,10 @@
-#map1 {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-}
+// #map1 {
+//   width: 100%;
+//   height: 100%;
+//   position: absolute;
+//   top: 0px;
+//   left: 0px;
+// }
 
 .map-p{
   font-size: 20px;
@@ -16,7 +16,31 @@
   width: 100% !important;
 }
 
+#map1{
+  height: 500px !important;
+  width: 100% !important;
+}
+
+
 .map-img{
   width: 40px;
   height: auto;
+}
+
+
+.img-map{
+  &:hover{
+    opacity: 1;
+    cursor: pointer;
+  }
+  opacity: 0.7;
+  width: 65px;
+}
+
+.pressed{
+  width: 62px;
+  -webkit-filter: drop-shadow(1px 1px 0 black)
+                  drop-shadow(-1px -1px 0 black);
+  filter: drop-shadow(1px 1px 0 black)
+          drop-shadow(-1px -1px 0 black);
 }
