filter for query and options working

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -41,3 +41,11 @@
   width: 200px;
 }
 
+.blank {
+  font-family: 'Anton', sans-serif;
+    padding-left: 9px;
+    font-size: 15px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    font-style: normal;
+}
