--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,8 +7,8 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "select2";
-@import "select2-bootstrap";
+// @import "select2";
+// @import "select2-bootstrap";
 
 // Your CSS partials
 @import "components/index";
