--- a/app/views/beaches/index.html.erb
+++ b/app/views/beaches/index.html.erb
@@ -9,16 +9,16 @@
 <main>
   <div class="mr-3 ml-3">
     <div id="beaches" class="search d-flex">
-      <p class="pl-3">Qual a praia perfeita para você?</p>
-      <%= form_tag beaches_path, method: :get, class: "pl-3" do %>
-        <%= text_field_tag :query,
-          params[:query],
-          placeholder: "  Digite uma praia...", class: "blank" %>
-          <%= select_tag :options, raw("<option>Melhor praia</option><option>Melhor praia para surfe</option><option>Praia mais limpa</option><option>Praia mais segura</option><option>Praia mais acessível</option>" ), prompt: "Ordenar por", class: 'form-control', id: 'select_two' %>
-           <%= button_tag :submit, class: "non-btn" do %>
-            <i class="fas fa-search h2"></i>
-          <% end %>
+      <p class="pl-3" >Qual a praia perfeita para você?</p>
+      <%= form_tag beaches_path, method: :get, class: "pl-3 d-flex" do %>
+        <div id= "search-data" class="form-search search-data" data-skills="<%= @names.to_json %>">
+          <%= text_field_tag :query, nil, autocomplete: :off, class: "blank search-input", placeholder: "  Digite uma praia..."%>
+        </div>
+        <%= select_tag :options, raw("<option>Melhor praia</option><option>Melhor praia para surfe</option><option>Praia mais limpa</option><option>Praia mais segura</option><option>Praia mais acessível</option>" ), prompt: "Ordenar por", class: 'form-control', id: 'select_two' %>
+        <%= button_tag :submit, class: "non-btn" do %>
+          <i class="fas fa-search h2"></i>
         <% end %>
+      <% end %>
       <div id="show-map" data-toggle="popover" title="Mostrar Mapa">
         <%= image_tag "map.png", class: "img-map", id: "img-map"  %>
       </div>
