--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -48,6 +48,7 @@
     padding-top: 6px;
     padding-bottom: 6px;
     font-style: normal;
+  }
 .autocomplete {
   /*the container must be positioned relative:*/
   position: relative;
