--- a/app/views/beaches/index.html.erb
+++ b/app/views/beaches/index.html.erb
@@ -25,6 +25,7 @@
             <div class="flip m-3">
               <div class="front" style="background-image: linear-gradient(rgba(255,255,255,0.5),rgba(0,0,0,0)), url('<%= cl_image_path beach.photo.key%>')">
                 <h2 class="text-shadow align-middle h2flip"><%=beach.name %></h2>
+                  <div class="beach-weather-infos">
                 <div class="d-flex">
                   <p class="p location-bottom-right">
                     <% c = 1 %>
@@ -41,6 +42,7 @@
                     <% end  %>
                   </p>
                   <%= image_tag "weather_icons/#{beach.weather_forecast_dailies[0].icon}.png", class: "location-bottom-left" %>
+                </div>
                 </div>
               </div>
               <div class="back" >
