--- a/app/views/beaches/index.html.erb
+++ b/app/views/beaches/index.html.erb
@@ -20,7 +20,7 @@
         <% end %>
       <% end %>
       <div id="show-map" data-toggle="popover" title="Mostrar Mapa">
-        <%= image_tag "map.png", class: "img-map", id: "img-map"  %>
+        <i class="fas fa-globe-americas pl-2 img-map" id="img-map"></i>
       </div>
     </div>
 
