--- a/app/assets/stylesheets/components/_range.scss
+++ b/app/assets/stylesheets/components/_range.scss
@@ -1,15 +1,8 @@
 .frame {
-  position: absolute;
-  top: 50%;
-  left: 50%;
   width: 100%;
   height: 400px;
-  margin-top: -200px;
-  margin-left: -200px;
   border-radius: 2px;
-  box-shadow: 4px 8px 16px 0 rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  background: #ff7043;
   color: #333;
   font-family: "Open Sans", Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -21,16 +14,14 @@
 }
 
 .range {
-  background: #fff;
   height: 2rem;
-  width: 55%;
+  width: 100%;
   border-radius: 5rem;
-  box-shadow: 1px 5px 5px rgba(black, 0.3);
-
-  display: flex;
   align-items: center;
   justify-content: center;
+  color: black;
 }
+
 
 input[type="range"] {
   -webkit-appearance: none;
@@ -67,7 +58,7 @@ input[type="range"] {
   }
 
   &:hover::-webkit-slider-runnable-track {
-    background: #ff6e40;
+    background: #59929e;
   }
 
   // IE
@@ -100,14 +91,14 @@ input[type="range"] {
     border-radius: 3rem;
   }
   &:focus::-ms-fill-lower {
-    background: #ff6e40;
+    background: #59929e;
   }
   &::-ms-fill-upper {
     background: #bdbdbd;
     border-radius: 3rem;
   }
   &:focus::-ms-fill-upper {
-    background: #ff6e40;
+    background: #59929e;
   }
 
   //FIREFOX
@@ -132,6 +123,6 @@ input[type="range"] {
     cursor: pointer;
   }
   &:hover::-moz-range-track {
-    background: #ff6e40;
+    background: #59929e;
   }
 }
