--- a/app/views/beaches/show.html.erb
+++ b/app/views/beaches/show.html.erb
@@ -486,9 +486,17 @@
   </div>
 
   <div id="traffic" class="container2 inactive-tab">
+    <div id="floating-panel" class=''>
+      <b>Qual seu meio de transporte? </b>
+      <select id="mode">
+        <option value="DRIVING">Carro</option>
+        <option value="BICYCLING">Bicicleta</option>
+        <option value="TRANSIT">Transporte Público</option>
+      </select>
+    </div>
     <div id="map" data-markers="<%= @markers.to_json %>" data-ok="<%= ENV['GOOGLEMAP_API_KEY'] %>" >
     </div>
-    <div id="transit" class="d-flex justify-content-around pt-3">
+    <div id="transit" class="pt-3">
       <div id="car" class="card-transit m-2">
       </div>
       <div id="public-transportation"  class="card-transit-public">
