--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&language=pt-BR&key=#{ENV['GOOGLEMAP_API_KEY']}" %>
+
   </head>
 
   <body>
@@ -14,8 +16,5 @@
     <%= render 'shared/flashes' %>
     <%= yield %>
     <%= render "shared/footer" %>
-    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&key=#{ENV['GOOGLEMAP_API_KEY']}" %>
-    <%= javascript_pack_tag "map1" %>
-    <%= javascript_pack_tag "map" %>
   </body>
 </html>
