--- a/app/views/beaches/index.html.erb
+++ b/app/views/beaches/index.html.erb
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row w-100">
       <div class="col-12">
         <div id="map1" data-markers="<%= @markers.to_json %>" class="inactive-tab m-2"></div>
       </div>
