--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -126,10 +126,15 @@
 
 
 .card-day{
+  margin-top: 35px;
   opacity: 0.6;
   &:hover {
     opacity: 1;
   }
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: 20px;
 }
 
 #ranges{
@@ -257,11 +262,15 @@
 
 .card-trip{
   .image-temp{
-    width: 90px;
+    width: 86px;
   }
   .image-wave{
     width: 290px;
     padding-top: 10px;
+  }
+  .image-wave1{
+    width: 230px;
+    padding-top: 14px;
   }
   .image-wea{
     width: 150px;
@@ -290,4 +299,15 @@
   font-size: 16px;
   margin: 0;
   font-weight: bold;
+}
+
+
+.row11{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.col-11{
+  width: 22%;
 }
