--- a/app/assets/stylesheets/components/_range.scss
+++ b/app/assets/stylesheets/components/_range.scss
@@ -2,7 +2,6 @@
   width: 100%;
   height: 400px;
   border-radius: 2px;
-  overflow: hidden;
   color: #333;
   font-family: "Open Sans", Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -14,10 +13,9 @@
 }
 
 .range {
-  height: 2rem;
+  height: 100%;
   width: 100%;
   border-radius: 5rem;
-  align-items: center;
   justify-content: center;
   color: black;
 }
