--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item dropdown mr-2">
-          <i class="fas fa-user font-big"></i>
+          <i class="fas fa-user font-big dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Minhas preferências", "#", class: "dropdown-item" %>
             <%= link_to "Meu perfil", "#", class: "dropdown-item" %>
