--- a/app/views/beaches/index.html.erb
+++ b/app/views/beaches/index.html.erb
@@ -12,7 +12,7 @@
       <p class="pl-3" >Qual a praia perfeita para você?</p>
       <%= form_tag beaches_path, method: :get, class: "pl-3 d-flex" do %>
         <div id= "search-data" class="form-search search-data" data-skills="<%= @names.to_json %>">
-          <%= text_field_tag :query, nil, autocomplete: :off, class: "blank search-input", placeholder: "  Digite uma praia..."%>
+          <%= text_field_tag :query, nil, class: "blank search-input", placeholder: "  Digite uma praia..."%>
         </div>
         <%= select_tag :options, raw("<option>Melhor praia</option><option>Melhor praia para surfe</option><option>Praia mais limpa</option><option>Praia mais segura</option><option>Praia mais acessível</option>" ), prompt: "Ordenar por", class: 'form-control', id: 'select_two' %>
         <%= button_tag :submit, class: "non-btn" do %>
@@ -107,3 +107,13 @@
     </div>
   </div>
 </main>
+
+<script>
+const search = document.getElementById('search-data')
+const skills = JSON.parse(search.dataset.skills)
+$(function() {
+  $("#query" ).autocomplete({
+    source: skills
+  });
+});
+</script>
