--- a/app/views/beaches/index.html.erb
+++ b/app/views/beaches/index.html.erb
@@ -111,7 +111,8 @@
 <script>
 const search = document.getElementById('search-data')
 const skills = JSON.parse(search.dataset.skills)
-$(function() {
+
+search.addEventListener('keyup', (event) => {
   $("#query" ).autocomplete({
     source: skills
   });
